update the commit hash of the project submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SUSTech-EE326-Digital-image-Processing-Project"]
 	path = SUSTech-EE326-Digital-image-Processing-Project
-	url = https://mirrors.sustech.edu.cn/git/fanqy2018/SUSTech-EE326-Digital-image-Processing-Project.git
+	url = https://github.com/sparkcyf/SUSTech-EE326-Digital-Image-Processing-Project.git
